Clean up the certificate tests and the property stream
Run the cleanup of the certificate tests in a finally block, so that an
assertion failure cannot leave the application behind or leave the certificate
management service mock configured to throw for the tests that follow.

Collect the service provider properties written without the certificate
reference with Stream.toList(). The list is only iterated while the properties
are written, so it does not have to be modifiable.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>